<?xml version="1.0"?>
<package format="3">
  <name>odom_computation</name>
  <version>0.0.0</version>
  <description>ROS2 package for computing odometry from wheel encoder ticks</description>
  <maintainer email="vanavenkatavignesh630@gmail.com">Vignesh</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf_transformations</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>